2007-12-04  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added XML2SAXMetalinkProcessor class, which is a lot faster than
	the predecessor, Xml2MetalinkParser class.
	I tested them against 94KB metalink file with 1234 chunk checksums.
	The new one parsed it in 22msec, while it took 6000msec with old one.
	* src/XML2SAXMetalinkProcessor.{h, cc}
	* test/XML2SAXMetalinkProcessorTest.cc
	* src/MetalinkParserController.{h, cc}
	* test/MetalinkParserControllerTest.cc
	* src/MetalinkParserState.h: Also added 16 subclasses.
	* src/main.cc
	* src/Metalink2RequestGroup.cc
	* src/MetalinkHelper.cc
	* src/MetalinkEntry.cc
	* src/ChunkChecksum.h
	
	Rewritten Base64 class for better performance.
	* src/Base64.{h, cc}
	* test/Base64Test.cc
	* src/HttpRequest.cc

2007-12-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug#1841757: aria2 will connect to server to only get
	file size.
	* src/StreamFileAllocationEntry.cc
	* src/option_processing.cc
	* src/HttpResponseCommand.cc: Now reuse connection in segmented
	downloads.
	* src/FtpNegotiationCommand.cc
	
	Suppressed wrong message when finding PreDownloadHandler
	* src/RequestGroup.cc
	
2007-11-29  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated usage
	* src/version_usage.cc

	Updated man page
	* doc/aria2c.1.txt
	* doc/aria2c.1

	Updated po files
	* po/aria2c.pot
	* po/*.po
	* po/*.gmo

2007-11-29  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Eliminated g++-4.2 warning
	* src/DownloadHandlerConstants.{h, cc}
	* src/Util.cc
	* test/MetaFileUtilTest.cc
	* test/PStringBuildVisitorTest.cc
	
	Fixed bug: --check-integrity doesn't work for multi file torrent.
	* src/RequestGroup.cc
	* src/BtCheckIntegrityEntry.cc
	
2007-11-29  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed a2io.h
	* src/a2io.h

2007-11-28  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added direct I/O support. The current implementation uses O_DIRECT,